--- a/config/redis.yml
+++ b/config/redis.yml
@@ -1,5 +1,5 @@
 test:
-  url: redis://localhost:6379/12
+  url: redis://localhost:6379
 
 development:
-  url: redis://localhost:6379/12
+  url: redis://localhost:6379
