--- a/config/test-secrets.yml
+++ b/config/test-secrets.yml
@@ -4,3 +4,4 @@ test:
   aws_secret_access_key: test_aws_secret_access_key
   fb_app_id: test_fb_app_id
   fb_app_secret: test_fb_app_secret
+  prerender_io_token: test_prerender_token
