--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -2,6 +2,7 @@ default: &default
   secret_key_base: <%= Secrets.secret_key_base %>
   aws_access_key_id: <%= Secrets.aws_access_key_id %>
   aws_secret_access_key: <%= Secrets.aws_secret_access_key %>
+  prerender_io_token: <%= Secrets.prerender_io_token %>
 
 test: *default
 development: *default
