Fetch secrets from ENV

--- a/apps/basechurch/.env.dev
+++ b/apps/basechurch/.env.dev
@@ -1,3 +1,9 @@
+AWS_ACCESS_KEY_ID=test_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=test_aws_secret_access_key
 DATABASE_HOST=db
 DATABASE_USER=postgres
 DATABASE_PASSWORD=
+FB_APP_ID=a2222222222222
+FB_APP_SECRET=a222222222333
+PRERENDER_IO_TOKEN=test_prerender_token
+SECRET_KEY_BASE=asdlkjfh23lkj4h23lkjehfsd7f8xc98zxvhxkvjhenrweefdxi99
