--- a/apps/basechurch/config/secrets.yml
+++ b/apps/basechurch/config/secrets.yml
@@ -1,8 +1,10 @@
 default: &default
-  secret_key_base: <%= Secrets.secret_key_base %>
-  aws_access_key_id: <%= Secrets.aws_access_key_id %>
-  aws_secret_access_key: <%= Secrets.aws_secret_access_key %>
-  prerender_io_token: <%= Secrets.prerender_io_token %>
+  aws_access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+  aws_secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
+  fb_app_id: <%= ENV["FB_APP_ID"] %>
+  fb_app_secret: <%= ENV["FB_APP_SECRET"] %>
+  prerender_io_token: <%= ENV["PRERENDER_IO_TOKEN"] %>
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
 test: *default
 development: *default
