--- a/apps/basechurch/docker-compose.yml
+++ b/apps/basechurch/docker-compose.yml
@@ -1,7 +1,13 @@
 version: '3'
 services:
-  web:
-    build: .
+  db:
+    image: postgres:latest
+  api:
+    image: fisherhall/api:latest
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     ports:
       - "3000:3000"
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - db
