--- a/apps/basechurch/docker-compose.yml
+++ b/apps/basechurch/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   db:
     image: postgres:latest
+    environment:
+      POSTGRES_DB: mcac
   api:
     image: fisherhall/api:latest
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
