--- a/apps/basechurch/docker-compose.yml
+++ b/apps/basechurch/docker-compose.yml
@@ -1,15 +1,9 @@
 version: '3'
 services:
-  db:
-    image: postgres:latest
-    environment:
-      POSTGRES_DB: mcac
   api:
     image: fisherhall/api:latest
+    env_file:
+      - ./.env.production
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     ports:
       - "3000:3000"
-    env_file:
-      - ./.env.dev
-    depends_on:
-      - db
