Pull in maven dependencies from docker
docker-compose run landing mvn package

--- a/apps/landing/docker-compose.override.yml
+++ b/apps/landing/docker-compose.override.yml
@@ -4,3 +4,6 @@ services:
     build: .
     env_file:
       - ./.env.dev
+    volumes:
+      - ./target:/app/target
+    command: bash -c "mvn package && java -jar target/landing-jar-with-dependencies.jar"
