--- a/apps/basechurch/docker-compose.yml
+++ b/apps/basechurch/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   api:
     image: fisherhall/api:latest
     env_file:
-      - ./.env.production
+      - ./.env.${BASECHURCH_ENV}
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     ports:
       - "3000:3000"
