--- a/apps/landing/docker-compose.test.yml
+++ b/apps/landing/docker-compose.test.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   landing:
     env_file:
-      - ./.env.test
+      - ./.env.${BASECHURCH_ENV}
     volumes:
       - ./target:/app/target
       - ./src:/app/src
