--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,8 +1,9 @@
 default: &default
-  secret_key_base: <%= Secrets.secret_key_base %>
-  aws_access_key_id: <%= Secrets.aws_access_key_id %>
-  aws_secret_access_key: <%= Secrets.aws_secret_access_key %>
-  prerender_io_token: <%= Secrets.prerender_io_token %>
+  aws_access_key_id: <%= ENV["aws_access_key_id"] %>
+  aws_secret_access_key: <%= ENV["aws_secret_access_key"] %>
+  prerender_io_token: <%= ENV["prerender_io_token"] %>
+  secret_key_base: <%= ENV["secret_key_base"] %>
+  secret_token: <%= ENV["secret_token"] %>
 
 test: *default
 development: *default
