--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
+env:
+  - secret_key_base=asdlkjfh23lkj4h23lkjehfsd7f8xc98zxvhxkvjhenrweefdxi99 aws_access_key_id=test_aws_access_key_id aws_secret_access_key=test_aws_secret_access_key fb_app_id=test_fb_app_id fb_app_secret=test_fb_app_secret prerender_io_token=test_prerender_token
 rvm:
-- 2.3.1
+  - 2.3.1
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake
